--- a/styles.css
+++ b/styles.css
@@ -253,3 +253,44 @@ button {
     line-height: 20px;
     transition: .4s;
 }
+
+.arrow.left {
+    left: 10px
+}
+.modal {
+    position: fixed;
+    inset: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(0, 0, 0, .4);
+    backdrop-filter: blur(4px);
+    z-index: 1000;
+}
+
+.hidden {
+    display: none;
+}
+
+.modalCard {
+    background: #1e293b;
+    padding: 25px 35px;
+    border-radius: 14px;
+    text-align: center;
+    box-shadow: 0 10px 40px rgba(0, 0, 0, .5);
+}
+
+.modalCard button {
+    margin-top: 15px;
+    background: #22c55e;
+}
+.modalActions {
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    margin-top: 15px;
+}
+
+#closeBtn {
+    background: #ef4444;
+}
